<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for the editor -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_overview"
                    style="@style/CategoryStyle" />

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="110dp"
                    android:layout_height="85dp"
                    android:paddingRight="6dp"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

            <!-- Input fields -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:paddingLeft="4dp"
                android:orientation="vertical">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_item_name"
                    android:hint="@string/hint_item_name"
                    android:inputType="textCapWords"
                    style="@style/EditorFieldStyle" />

                <!-- Sale field -->
                <EditText
                    android:id="@+id/edit_item_sale"
                    android:hint="@string/hint_item_sale"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <!-- Units for price ($) -->
                    <TextView
                        android:id="@+id/label_money_units"
                        android:text="@string/unit_money"
                        style="@style/EditorUnitsStyle"/>

                    <!-- Price field -->
                    <EditText
                        android:id="@+id/edit_item_price"
                        android:hint="@string/hint_item_price"
                        android:inputType="numberDecimal"
                        style="@style/EditorFieldStyle" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Measurement category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_supplier"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/CategoryStyle" />

            <EditText
                android:id="@+id/edit_item_phone"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:paddingLeft="8dp"
                android:hint="@string/hint_item_supplier"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

        <!-- Gender category -->
        <LinearLayout
            android:id="@+id/container_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_condition"
                style="@style/CategoryStyle" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_gender"
                    android:layout_height="48dp"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Measurement category -->
        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:text="@string/category_quantity"
                style="@style/CategoryStyle" />

            <Button
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:text="+"
                android:id="@+id/increase_button"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="8dp"
                android:onClick="increment"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/edit_text_item_quantity"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <Button
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:text="-"
                android:layout_marginBottom="16dp"
                android:id="@+id/decrease_button"
                android:layout_marginLeft="8dp"
                android:onClick="decrement"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_order"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add_image"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
